# cmakelist_examples

./: CMakeLists.txt  README.md
projects/: CMakeLists.txt
projects/a_project_executable/: CMakeCache.txt  CMakeLists.txt  Makefile  a_executable  cmake_install.cmake  main.cpp
projects/b_project_dynamiclib/: CMakeLists.txt
projects/b_project_dynamiclib/include/: mymath.h
projects/b_project_staticlib/: CMakeLists.txt
projects/b_project_staticlib/src/: mymath.c
projects/c_project_use_dynamiclib/: CMakeLists.txt
projects/c_project_use_dynamiclib/libs/: b_dynamiclib.lib
projects/c_project_use_dynamiclib/src/: main.c
projects/c_project_use_staticlib/: CMakeLists.txt
projects/c_project_use_staticlib/include/: mymath.h
projects/c_project_use_staticlib/libs/: b_staticlib.lib
projects/e_project_testcase/: CMakeLists.txt
projects/f_project_linksubmodule/: CMakeLists.txt
projects/g_project_cpp11pragma/: CMakeLists.txt  README.md  cpp11_1_auto_nullptr_for.cpp  cpp11_2_stl.cpp  cpp11_3_concurrent.cpp  cpp11_4_sharedptr.cpp  cpp11_5_stdfunclamda.cpp  cpp11_header.h  main.cpp
projects/g_project_cppcontainers/: CMakeLists.txt  README.md  main.cpp  sort.cpp  stl_array.cpp  stl_deque.cpp  stl_headers.h  stl_list.cpp  stl_map.cpp  stl_queue.cpp  stl_set.cpp  stl_stack.cpp  stl_vector.cpp
projects/g_project_cppthreads/: CMakeLists.txt  README.md  cppthread_header.h  cppthreads_1_newthread.cpp  cppthreads_2_threadmanage.cpp  cppthreads_3_mutexlock.cpp  cppthreads_4_concurrent.cpp  cppthreads_5_stragate.cpp  cppthreads_6_posix.cpp  main.cpp
projects/h_project_webrtcexamples/: CMakeLists.txt
projects/h_project_webrtcexamples/peerconnection/: CMakeLists.txt
projects/h_project_webrtcexamples/peerconnection/client/: CMakeLists.txt  conductor.cc
projects/h_project_webrtcexamples/peerconnection/server/: CMakeLists.txt  main.cc  peer_channel.cc  utils.cc
projects/h_project_webrtcexamples/relayserver/: CMakeLists.txt  relayserver_main.cc
projects/h_project_webrtcexamples/stunprober/: CMakeLists.txt
projects/h_project_webrtcexamples/stunserver/: CMakeLists.txt  stunserver_main.cc
projects/h_project_webrtcexamples/turnserver/: CMakeLists.txt  turnserver_main.cc
projects/h_project_webrtcpeerconnection/: main.cc  peer_channel.cc  utils.cc
projects/h_project_webrtcpeerconnection/depend/: checks.cc  checks.h  stringencode.h
projects/i_project_sigslot/: CMakeLists.txt  main.cpp  sigslot.h  sigslot_cpp.cpp  sigslot_cpp.h  testsigslot.cpp  testsigslot.h
projects/j_project_datastructure/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  figure.cpp  figure.h  j_datastructure  list.cpp  list.h  list_test.cpp  list_test.h  main.cpp  queue.cpp  queue.h  queue_test.cpp  queue_test.h  stack.cpp  stack.h  stack_test.cpp  stack_test.h  test.h  tree.cpp  tree.h  tree_test.cpp  tree_test.h  util.h
projects/j_project_datastructure/j_datastructure.dSYM/Contents/: Info.plist
projects/j_project_datastructure/j_datastructure.dSYM/Contents/Resources/DWARF/: j_datastructure
projects/k_project_searchandsort/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  k_sort  main.cpp  search.cpp  search.h  sort.cpp  sort.h  test_search.cpp  test_search.h  test_sort.cpp  test_sort.h  util.cpp  util.h  vs.md
projects/l_project_cpugpu/: CMakeLists.txt  README.md  main.cpp  main_test.cpp  picture.cpp  picture.h  pictureex.cpp  pictureex.h
projects/webrtcsource/: CMakeLists.txt  common_types.h
projects/webrtcsource/api/: CMakeLists.txt  jsepicecandidate.h  peerconnectionfactoryproxy.h  peerconnectioninterface.h  proxy.h  rtpparameters.h  statstypes.cc  statstypes.h
projects/webrtcsource/api/audio_codecs/: _names.txt
projects/webrtcsource/api/ortc/: _names.txt  udptransportinterface.h
projects/webrtcsource/api/video/: _names.txt
projects/webrtcsource/audio/: CMakeLists.txt  _names.txt
projects/webrtcsource/audio/utility/: audio_frame_operations.cc
projects/webrtcsource/base/: CMakeLists.txt  _names.txt  array_view.h  asyncinvoker-inl.h  asyncinvoker.cc  asyncinvoker.h  asyncpacketsocket.cc  asyncpacketsocket.h  asyncresolverinterface.cc  asyncresolverinterface.h  asyncsocket.cc  asyncsocket.h  asynctcpsocket.cc  asynctcpsocket.h  asyncudpsocket.cc  asyncudpsocket.h  base64.cc  bind.h  buffer.h  bytebuffer.cc  bytebuffer.h  byteorder.h  callback.h  checks.cc  checks.h  copyonwritebuffer.h  crc32.cc  crc32.h  criticalsection.cc  criticalsection.h  cryptstring.cc  event.cc  event.h  event_tracer.cc  helpers.cc  helpers.h  httpbase.cc  httpbase.h  httpcommon-inl.h  httpcommon.cc  (+83 more)
projects/webrtcsource/base/java/src/org/webrtc/: Logging.java
projects/webrtcsource/call/: CMakeLists.txt  _names.txt
projects/webrtcsource/p2p/: CMakeLists.txt
projects/webrtcsource/p2p/base/: _names.txt  asyncstuntcpsocket.cc  asyncstuntcpsocket.h  basicpacketsocketfactory.cc  basicpacketsocketfactory.h  candidate.h  common.h  jseptransport.h  packetsocketfactory.h  packettransportinternal.h  port.cc  port.h  portallocator.cc  portallocator.h  portinterface.h  relayport.cc  relayport.h  relayserver.cc  relayserver.h  sessiondescription.h  stun.cc  stun.h  stunport.cc  stunport.h  stunrequest.cc  stunrequest.h  stunserver.cc  stunserver.h  tcpport.cc  tcpport.h  transportdescription.h  transportinfo.h  turnport.cc  turnport.h  turnserver.cc  turnserver.h  udptransport.cc  udptransport.h
projects/webrtcsource/p2p/client/: _names.txt  basicportallocator.cc  basicportallocator.h
projects/webrtcsource/p2p/quic/: _names.txt
projects/webrtcsource/system_wrappers/: CMakeLists.txt
projects/webrtcsource/system_wrappers/include/: _names.txt
projects/webrtcsource/system_wrappers/source/: _names.txt
